# SimpleWebserverRust

./: Cargo.toml  README.md
src/: main.rs
src/controllers/: mod.rs  user_controller.rs  weather_controller.rs
src/models/: user_model.rs  weather_model.rs
static/: index.html  script.js  style.css
