[package]
name = "simplewebapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.7", features = ["tokio", "http1"] }
hyper = "1.5.0"
reqwest = { version = "0.12.9",features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-http = {version = "0.6.1", features = ["fs"] }
anyhow = "1.0.95"
